deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terrascan
  labels:
    app.kubernetes.io/name: terrascan
    app.kubernetes.io/part-of: terrascan
