deploy/k8s/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terrascan
  namespace: terrascan
  labels:
    app.kubernetes.io/name: terrascan
    app.kubernetes.io/part-of: terrascan
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: terrascan
  template:
    metadata:
      labels:
        app.kubernetes.io/name: terrascan
        app.kubernetes.io/part-of: terrascan
    spec:
      containers:
        - name: terrascan
          image: terrascan:v1
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 200m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 20
