deploy/k8s/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terrascan
  namespace: terrascan
  labels:
    app.kubernetes.io/name: terrascan
    app.kubernetes.io/part-of: terrascan
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: terrascan
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
